feat: 원하는 날짜에 미션 기록 불러오기

--- a/bitamin/src/styles/mission/quest2.module.css
+++ b/bitamin/src/styles/mission/quest2.module.css
@@ -489,3 +489,14 @@
     font-size: 1.2em;
     line-height: 1;
 }
+
+.disabledDay {
+    pointer-events: none;
+    opacity: 0.5;
+    cursor: default;
+}
+
+.disabledDay:hover {
+    background-color: transparent;
+}
+
